--- a/app.json
+++ b/app.json
@@ -2,10 +2,12 @@
   "expo": {
     "name": "HearMe",
     "slug": "HearMe",
+    "scheme": "HearMe",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+   
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -24,7 +26,11 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
-    }
+  
+      "bundler": "metro"
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
